AX: accessibility data table heuristics fail on this jQuery table https://bugs.webkit.org/show_bug.cgi?id=129369

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Updated accessibility/table-detection.html

If a table uses display style of table-row-group, the RenderTable gets disassociated from the HTMLTableElement.
We can find that element in a different way by asking for the parent of the first table section.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::activeDescendant):
    This method was accessing an object's element unsafely and this table change exposed the issue.
* accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::tableElement):
(WebCore::AccessibilityTable::isDataTable):
* accessibility/AccessibilityTable.h:

LayoutTests:

* accessibility/table-detection.html:
* platform/mac/accessibility/table-detection-expected.txt:



Canonical link: https://commits.webkit.org/148130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165535 268f45cc-cd09-0410-ab3c-d52691b4dbfc